# destinations-recommender

./: Cargo.toml  package.json
graphql/: photos_query.graphql  recommendation_query.graphql  schema.json
src/: layout.rs  main.rs  photos.rs  recommendations.rs
static/: index.html
static/css/: mystyles.css
static/sass/: mystyles.scss
