[package]
name = "destinations-recommender"
version = "0.1.0"
authors = ["Dmitry Grachikov <dgrachikov@gmail.com>"]
edition = "2018"

[profile.release]
lto = true
opt-level = 's'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.11.0"
graphql_client = "0.8.0"
serde = "1.0.104"
serde_json = "1.0.45"
reqwest = "0.10.1"
http = "0.2.0"
failure = "0.1.6"